tests/NormalTests/paczka1/fuzzy1/88992088.err
Error in line 1: ru7dr S918 48,9
Error in line 17: dOO A466 65,2
Error in line 15: fcY S918 28,3
Error in line 18: aaQ8 S918 30,6
Error in line 24: aaQ8 A466 35,5
Error in line 13: KxrBITDQ A144 10,0
Error in line 25: aaQ8 S918 78,4
Error in line 34: ru7dr A466 7,6
Error in line 38: ru7dr A970 39,5
